all laptop changes

--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
 <h1> Battleship </h1>
 <div id="board-container"></div>
 <div id="opponent-board-container"></div>
+<div>
+    <a href="https://www.flaticon.com/free-icons/crosshair" title="crosshair icons">Crosshair icons created by Creaticca Creative Agency - Flaticon</a>
+</div>
 </body>
 </html>
