--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 <body>
     
 <h1> Battleship </h1>
-<div id="board-container"></div>
+<div id="player-interface">
+    <div>
+        <button> X </button>
+        <button> Ready </button>
+    </div>
+    <div id="board-container"></div>
+</div>
+
 <div id="opponent-board-container"></div>
 <div>
     <a href="https://www.flaticon.com/free-icons/crosshair" title="crosshair icons">Crosshair icons created by Creaticca Creative Agency - Flaticon</a>
