implement change direction button

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <h1> Battleship </h1>
 <div id="player-interface">
     <div>
-        <button> X </button>
-        <button> Ready </button>
+        <button id="dir-btn">x</button>
+        <button>Ready</button>
     </div>
     <div id="board-container"></div>
 </div>
