--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div id="player-interface">
     <div>
         <button id="dir-btn">x</button>
-        <button>Ready</button>
+        <button id="rdy-btn">Ready</button>
     </div>
     <div id="board-container"></div>
 </div>
