refactor ready button to game.js

--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
     
 <h1> Battleship </h1>
 <div id="player-interface">
-    <div>
-        <button id="dir-btn">x</button>
+        <!-- <button id="dir-btn">x</button> -->
         <button id="rdy-btn">Ready</button>
-    </div>
-    <div id="board-container"></div>
 </div>
+<div id="board-container"></div>
 
 <div id="opponent-board-container"></div>
 <div>
