--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
         <!-- <button id="dir-btn">x</button> -->
         <button id="rdy-btn">Ready</button>
 </div>
-<div id="board-container"></div>
 
-<div id="opponent-board-container"></div>
+<div id="boards">
+    <div id="board-container"></div>
+    <div id="opponent-board-container"></div>
+</div>
+
 <div>
     <a href="https://www.flaticon.com/free-icons/crosshair" title="crosshair icons">Crosshair icons created by Creaticca Creative Agency - Flaticon</a>
 </div>
